fix(home): fix white line on iOS

--- a/pages/Index.module.css
+++ b/pages/Index.module.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     width: 700px;
     max-width: 100%;
 }
